--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only app.ts"
+    "start": "ts-node-dev --respawn --transpile-only app.ts"
+  },
+  "prisma": {
+    "schema": "src/shared/prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
