rotas para o dashboard

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only app.ts"
+    "start": "ts-node-dev --respawn --transpile-only app.ts",
+     "seed": "ts-node src/shared/prisma/seed.ts"
   },
   "prisma": {
     "schema": "src/shared/prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
-    "prisma": "^5.20.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24"
+    "@types/node": "^20.11.24",
+    "prisma": "^6.6.0"
   }
 }
